[package]
name = "netutil"
version = "0.0.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Network Management Utility"
readme = "README.md"
repository = "https://github.com/EstebanBorai/netutil"
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.58.1"
